# librime-wanxiang

./: CMakeLists.txt  README.md  rime_ncnn_plugin.cc
.github/workflows/: convert.yml
data/: rime_morandi_lm.onnx  rime_morandi_lm.onnx.data  rime_morandi_lm.pt  vocab.txt
src/: rime_wanxiang_filter.cc  rime_wanxiang_filter.h  rime_wanxiang_plugin.cc
